# hockey-market-analysis-agent

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  agent_utils.py  catalog.py  config.py  main.py  prompts.py  schemas.py
app/tools/: list_products.py  report_generator.py  sentiment_analyzer.py  web_scraper.py
data/products/: bauer_reakt_helmet.html  bauer_supreme_stick.html  bauer_vapor_shin_pads.html  ccm_ht_gloves.html  ccm_tacks_skates.html  warrior_covert_stick.html
mock_data/products/: bauer_reakt_helmet.html  bauer_supreme_stick.html  bauer_vapor_shin_pads.html  ccm_ht_gloves.html  ccm_tacks_skates.html  warrior_covert_stick.html
static/: index.html
tests/: conftest.py  test_agent_graph.py  test_agent_utils.py  test_api.py  test_list_products.py  test_report_generator.py  test_web_scraper.py
